# pdf-gpt-team-prj-front

./: .env_template  .gitignore  App.py  README.md  api-specs.md  pyproject.toml  requirements.txt
pages/: 01_DocumentGPT.py  chat_continue.py  chat_new.py  config.py  login.py  main.py  regist.py  settings.py  stats.py
utils/: pdf_utils.py  rest.py
