[tool.poetry]
name = "pdf-gpt-team-prj-front"
version = "0.1.0"
description = ""
authors = ["znu <znu4847@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.39.0"
python-dotenv = "^1.0.1"
langchain-openai = "^0.2.3"
langchain-anthropic = "^0.2.3"
langchain = "^0.3.4"
langchain-community = "^0.3.3"
langchain-core = "^0.3.13"
pdfplumber = "^0.11.4"
faiss-cpu = "^1.9.0"
transformers = "^4.46.0"
torch = "^2.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
